# ledgerlab-openenv

./: .dockerignore  .gitignore  Dockerfile.space  Dockerfile.train  README.md  hackathondetails.md
docs/: COLAB_SUBMISSION_GUIDE.md  DATASET_SCALING.md  DATA_ORGANIZATION.md  DEPLOYMENT_TRAINING_PLAN.md  H100_SMOKE_SETUP.md  HF_SPACE_DEPLOY.md  LLM_FIELD_EXTRACTION.md  MASTER_PLAN.md  PHASES.md  README.md  REWARD_REDESIGN.md  RUBRIC_EVAL_PLAN.md  SUBMISSION_PLAN.md  TRAINING_RESULTS.md  TRAINING_RUNBOOK.md
finbench_env/: __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
finbench_env/server/: app.py  finbench_environment.py  memory.py  notebook_executor.py  rewards.py  trace.py  workspace.py
hf_space/: .gitattributes  README.md
northflank/: h100_runtime_job.json  h100_smoke_job.json  ledgerlab_baseline_job.json  ledgerlab_training_job.json  ledgerlab_vllm_eval_job.json  patch_envbuildersmoke_train_medium.json
scripts/: create_test_data.py  download_gdpval_tasks.py  download_tasks.py  eval_rubric.py  generate_fields_llm.py  generate_submission_fields.py  prepare_hf_space_bundle.py  push_to_hf_space.sh  run_agent.py  run_h100_baseline_only.sh  run_h100_runtime_bootstrap.sh  run_h100_smoke.sh  run_h100_training_medium.sh  run_h100_training_only.sh  run_h100_training_staged.sh  run_h100_vllm_eval.sh  split_manifest.py  test_agent_with_llm.py  test_e2e.py  test_remote_env.py  test_with_task.py
training/: common.py  eval_finbench_baseline.py  ledgerlab_trl_minimal_training_colab.ipynb  requirements-eval.txt  requirements-smoke.txt  train_finbench_grpo.py
(+102 files in other folders)
